增加部分学习笔记

--- a/docs/使用教程.md
+++ b/docs/使用教程.md
@@ -411,188 +411,17 @@ public interface StudentRepository extends JpaRepository<StudentUser,Long> {
 
 ![](https://image.yangxiansheng.top/img/20200612194107.png?imagelist)
 
-### 更新内容
+## 前端
 
-#### 注册
+### 登录 注册
 
-1. 书写`controller`层
+第一步. copy代码,保证样式引入成功
 
-   ```java
-      // 注册
-       @PostMapping("/register")
-       public OptionVo register(@RequestBody StudentDto studentDto){
-        
-       }
-   ```
+> 根据自己的课设设置背景图
 
-   > `@RequestBody`的作用就是接受`post`请求传递的对象注解
-   >
-   > 然后需要通过`StudentDto`这个类去接受传递传递的对象，帮助去取里面的值	
-
-`StudentDto.java`
-
-```java
-@Getter
-@Setter
-@AllArgsConstructor
-@NoArgsConstructor
-public class StudentDto {
-    private String name;
-    private String password;
-    private Integer gender;
-}
+```html
 
 ```
 
-2. 书写`vo`层，因为不需要返回任何数据,所以需要定义一个类
 
-   ```java
-   @Getter
-   @Setter
-   @AllArgsConstructor
-   @NoArgsConstructor
-   public class OptionVo {
-       private String msg;
-       private Integer code;
-   }
-   
-   ```
-写完发现写不下去了，之后就要编写`service`层去写具体的业务了。
-   
-3. 书写`service`层
-
-   ```java
-    // 注册 定义成void类型 参数是传递过来的studentDto对象
-    public void register(StudentDto studentDto){
-        // 查询数据库是否已经拥有该用户
-        Student student = this.studentRepository.findOneByNameAndPassword(studentDto.getName(),studentDto.getPassword());
-        if(student != null){
-            // 已存在 抛出异常
-            throw new AllExistedException(10002);
-        }else{
-            // save(params)  params    Student.setName()  Student.setPassowrd Student.setGender
-            // 构建模型对象 这一步操作相当于setName 用Builder去构建会变得很简单
-            Student student1 = Student.builder().name(studentDto.getName()).password(studentDto.getPassword())
-                 .gender(studentDto.getGender()).build();
-            // 调用JPA的添加方法 save()
-            this.studentRepository.save(student1);
-   
-        }
- }
-   
-   ```
-   
-4. 补全`controller层`
-
-   ```java
-   // 注册
-       @PostMapping("/register")
-       public OptionVo register(@RequestBody StudentDto studentDto){
-           this.studentService.register(studentDto);
-           return new OptionVo("注册成功",200);
-       }
-   ```
-
-5. 测试接口
-
-   ![](https://image.yangxiansheng.top/img/20200616233556.png?imagelist)
-
-   
-
-#### 分页获取学生列表
-
-1. 编写`controller`层
-
-   返回格式需要构建一个`pagingVo`对象统一分页格式，
-
-   `PagingVo`
-
-   ```java
-   
-   @Getter
-   @Setter
-   @NoArgsConstructor
-   public class PaggingVo<T> {
-       private Long total;
-       private Integer size;
-       private Integer page;
-       private Integer total_page;
-       // 使用到泛型 因为不止student一处使用到这个vo 使用泛型要将类名上也要打上泛型
-       private List<T> items;
-   
-       // 构造方法
-       public PaggingVo(Page<T> pageT) {
-           /*
-           传入service获取到的Page对象 初始化参数
-            */
-           this.initPageParamters(pageT);
-           // items - 查询出的分页记录
-           this.items = pageT.getContent();
-       }
-   
-   
-       // set分页信息参数 这些参数都是由Page对象内置，这里只是做了一个set操作,赋值
-       void initPageParamters(Page<T> pageT) {
-           this.total = pageT.getTotalElements();
-           this.size = pageT.getSize();
-           this.page = pageT.getNumber();
-           this.total_page = pageT.getTotalPages();
-       }
-   
-   }
-   
-   ```
-
-   然后正式编写`controller`层
-
-   > 首先传入`page`,`size`,但是考虑到分页参数不传的情况下必须要设置默认值
-   >
-   > 所以定义方法时打上注解`@RequestParams(name="page",defaultValue="0")Integer page`
-
-
-```java
-  @GetMapping("/getStudentList")
-    public ResponseVo getlist(@RequestParam(name = "page",defaultValue = "0")Integer page,
-                              @RequestParam(name = "size",defaultValue = "10")Integer size){
-    }
-```
-
-2. 继续编写`service`层
-
-   ```java
-      // 分页查询学生列表  返回对象是一个分页类型的对象 Page<T>
-      public Page<Student> getlist(Integer page,Integer size){
-           // jpa创建分页器
-           Pageable pageable = PageRequest.of(page,size);
-           // 相当于 select * from .. 传入pageable分页器
-           return this.studentRepository.findAll(pageable);
-       }
-   ```
-
-3. 然后补全`controller`的方法
-
-   ```java
-    public ResponseVo getlist(@RequestParam(name = "page",defaultValue = "0")Integer page,
-                                 @RequestParam(name = "size",defaultValue = "10")Integer size){
-   
-        // 获取刚刚在service获取的分页对象
-           Page page1 = studentService.getlist(page, size);
-        // 统一分页格式 一开始定义的接收类
-           PaggingVo<Student>paggingVo = new PaggingVo<>(page1);
-        // 返回ResponseBo 类格式的对象 传入msg,data(pagingvo),code
-           return new ResponseVo("返回成功",paggingVo,200);
-       }
-   ```
-
-4. 测试接口
-
-   **不传参数**
-
-   ![](https://image.yangxiansheng.top/img/20200616234619.png?imagelist)
-
-​          **传参数**
-
-![](https://image.yangxiansheng.top/img/20200616234635.png?imagelist)
-
-返回以上数据及代表书写成功
 
